--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
-                android:name="android.support.FILE_PROVIDER.PATHS"
+                android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/path"/>
         </provider>
 
